refactor: 简化账单数据结构；完善openai封装类，支持代理 ；增加异常处理流程

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,4 @@
 OPENAI_API_KEY = sk-xxx
 OPENAI_API_BASE_URL = https://api.openai.com/v1
+# OPENAI_API_PROXY_HOST = localhost
+# OPENAI_API_PROXY_PORT = 1080
