--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "joi": "^17.9.2",
     "lodash": "^4.17.21",
     "lowdb": "^6.0.1",
-    "openai": "^3.3.0"
+    "openai": "^3.3.0",
+    "tunnel": "^0.0.6"
   }
 }
